fix: progress bars contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,7 +268,7 @@ ul {
 }
 
 .progress-bar {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-weight: bold;
 }
 
@@ -285,23 +285,23 @@ ul {
 }
 
 .progress-bar-yellow {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 221, 0);
 }
 
 .progress-bar-lightblue {
-    background-color: #007b93;
+    background-color: #00b1d4;
 }
 
 .progress-bar-darkblue {
-    background-color: #0037ff;
+    background-color: #3c66ff;
 }
 
 .progress-bar-orange {
-    background-color: rgb(180, 105, 0);
+    background-color: rgb(255, 149, 0);
 }
 
 .progress-bar-green {
-    background-color: #005600;
+    background-color: #00ea00;
 }
 
 /* Personal Info */
